# test-rustci-python

./: .rustci.yml  README.md  pyproject.toml  requirements.txt
app/: main.py
docs/: conf.py  index.rst
