[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "demo_app"
version = "0.1.0"
description = "Demo app for RustCI demo pipeline"
authors = [{name="Demo User", email="demo@example.com"}]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
demo-app = "app.main:cli"
